style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.show-header {
  display: flex !important;
  animation: showNavs 300ms;
}

@keyframes showNavs {
  from {
    transform: translateX(-3rem);
  }
  to {
    transform: translateX(0);
  }
}

/* * {
  border: 2px solid red;
} */

/* member 2 css code*/

#frame2 {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: flex-start;
  height: 100%;
  width: 20rem;
  gap: 1rem;
  padding: 1rem;
}

#frame2.messages h1 {
  color: #000;
  font-family: sans-serif;
  font-size: 23px;
  font-style: normal;
  font-weight: 700;
  /* line-height: 16px; */
  /* margin-left: 1.5vw; */
}

.search {
  display: flex;
  width: 100%;
  height: 36px;
  padding: 10px 12px;
  align-items: center;
  /* gap: 16px; */
  flex-shrink: 0;
  border-radius: 12px;
  background: #eee;
  /* margin-left: 15px; */
}

.search button {
  display: flex;
  width: 2rem;
  height: inherit;

  outline: none;
  background-color: unset;
  border: none;

  & img {
    width: 1rem;
    height: 1rem;
  }
}

.search-input {
  background: #eee;
  width: 100%;
  outline: none;
}

#chat {
  display: flex;
  flex-direction: column;
  /* justify-content: flex-start; */
  width: 100%;
  height: 100%;
  /* top: 140px; */
  /* position: absolute; */
  /* left: 8vw; */
  gap: 16px;
  overflow-y: scroll;
  /* margin-left: 1.5vw; */
}

.sort-options {
  display: flex;
  flex-direction: row;
  width: 100%;
  gap: 10px;
  font-size: 1rem;
  color: rgba(0, 0, 0, 0.65);
  /* margin-left: 2vw; */
}

.dropdown-content {
  display: inherit;
  background-color: unset;
  outline: none;
  border: none;
  color: #2d9cdb;
  /* min-width: 160px; */
  /* box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); */
  /* z-index: 1; */
}

.chat-box {
  display: flex;
  width: 100%;
  height: 4rem;
  align-items: center;
  justify-content: space-between;
  gap: 0.5rem;
}

.chat-box h5 {
  color: rgba(0, 0, 0, 0.85);
  /* font-size: 2vw; */
  font-style: normal;
  font-weight: 500;
  /* line-height: 16px; */
}

.chat-box p {
  color: rgba(0, 0, 0, 0.45);
  /* font-size: 1rem; */
}

.profile-box {
  display: flex;
  flex-direction: column-reverse;
  height: 100%;
  width: 4rem;
  align-items: center;
  justify-content: center;
  position: relative;
}

.profile-box .profile-img {
  display: block;
  width: 36px !important;
  height: 36px;
  /* flex-shrink: 0; */
  border-radius: 50%;
  /* left: 0%;
  position: absolute; */
}

.elipse {
  width: 0.7rem;
  z-index: 5;
  /* margin-left: 2rem;
  margin-bottom: 0.2rem; */
  position: absolute;
  top: 60%;
  right: 0;
}

.message-box {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 0px;
  /* margin: 30px; */
  /* margin-left: 20px; */
  width: 100%;

  & h5 {
    font-size: 1rem;
  }

  & p {
    font-size: 0.8rem;
  }
}

#pin {
  width: 15px;
  height: 15px;
}

.time-check {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  gap: 6px;
  color: rgba(0, 0, 0, 0.45);
  align-self: flex-end;
}

#head-tag {
  display: flex;
  flex-direction: row;
  align-items: center;
}

button {
  display: inline-flex;
  align-items: center;
  gap: 7px;
  color: var(--Blue-2, #2d9cdb);
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
}

/* @media screen and (max-width: 1280px) {
  #chat {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    width: 30vw;
    height: 100vh;
    top: 140px;
    position: absolute;
    left: 11vw;
    gap: 16px;
    margin-left: 1.5vw;
  }
} */

@media screen and (max-width: 800px) {
  /* .search {
    display: flex;
    width: 36vw;
    height: 36px;
    padding: 10px 12px;
    align-items: center;
    gap: 16px;
    flex-shrink: 0;
    border-radius: 12px;
    background: #eee;
    margin-left: 15px;
  } */

  /* #chat {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    width: 50vw;
    height: 100vh;
    top: 140px;
    position: absolute;
    left: 15%;
    gap: 16px;
  } */

  /* .box1 {
    display: flex;
    width: 40vw;
    height: 5vh;
    align-items: center;
    justify-content: space-evenly;
    gap: 10px;
  } */

  /* .time-check {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    gap: 6px;
    color: rgba(0, 0, 0, 0.45);
    align-self: flex-end;
    margin-bottom: 1vh;
  } */

  .chat-box p {
    font-size: 1rem;
  }

  .chat-box p {
    font-size: 1rem;
  }

  /* .message-box {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 0px;
    margin: 30px;
    margin-top: 40px;
    margin-left: 20px;
    width: 30vw;
  } */
}

@media screen and (max-width: 640px) {
  #frame2 {
    width: 100%;
  }

  /* .box1 { */
  /* display: flex; */
  /* width: 45vw;
    height: 7vh; */
  /* align-items: center;
    justify-content: space-evenly; */
  /* } */

  /* .box1 h1 {
    color: rgba(0, 0, 0, 0.85);
    font-family: "SF Pro Display";
    font-size: 2vw;
    font-style: normal;
    font-weight: 500;
    line-height: 16px;
  } */

  .chat-container {
    display: none;
  }

  /* .box1 p {
    color: rgba(0, 0, 0, 0.45);
    font-size: 2vw;
  } */
}
/* ... */

